# claude-chats-browser

./: .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  STYLE.md
.claude/: CLAUDE.md
.claude/commands/: audit-code.md  check-spelling.md  check-style.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
resources/: resources.qrc  theme.qss
src/: collapsible_section.cpp  collapsible_section.hpp  conversation_list_model.cpp  conversation_list_model.hpp  conversation_reader.cpp  conversation_reader.hpp  conversation_tree.cpp  conversation_tree.hpp  database.cpp  database.hpp  icon_util.cpp  icon_util.hpp  import_worker.cpp  import_worker.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  message_widget.cpp  message_widget.hpp
tests/: tst_conversation_tree.cpp
tools/: backfill_conversations.py
